GRAMMAR.ebnf
(* This file is a convenience copy of the grammar in LANGUAGE.md.
   LANGUAGE.md is the normative language contract. *)

program              = { top-level-declaration | block-element } ;

top-level-declaration
                     = function-declaration
                     | rust-declaration
                     | type-declaration
                     | method-declaration ;

function-declaration = "fun", identifier, parameters, [ ":", type ], "do",
                       block, "end" ;
rust-declaration     = "extern", "rust", string-literal, "fun", identifier,
                       parameters, [ ":", type ] ;
method-declaration   = "method", qualified-name, parameters, [ ":", type ],
                       "do", block, "end" ;
parameters           = "(", [ parameter, { ",", parameter }, [ "," ] ], ")" ;
parameter            = identifier, ":", type ;

type-declaration     = "type", identifier, "is", type-body ;
type-body            = type
                     | struct-body
                     | union-body ;
struct-body          = "struct", { field-declaration }, "end" ;
field-declaration    = identifier, ":", type, [ "," ] ;
union-body           = "union", union-member, { union-member }, "end" ;
union-member         = "|", ( "Nil"
                     | identifier, [ "is", struct-body ] ) ;

qualified-name       = identifier, { ".", identifier } ;
type                 = value-type | reference-parameter-type ;
reference-parameter-type
                     = "Ref", "<", value-type, ">" ;
value-type           = builtin-value-type | qualified-name ;
unsigned-type        = "UInt8" | "UInt16" | "UInt32" | "UInt64" ;
builtin-value-type   = "Int64" | "Dec64" | "Bool" | "Nil"
                     | unsigned-type
                     | "Float32" ;

block                = { block-element } ;
block-element        = variable-declaration
                     | assignment
                     | while-statement
                     | break-statement
                     | if-form
                     | expression ;

variable-declaration = "let", [ "mut" ], identifier, ":", type,
                       "=", expression ;
place                = ( identifier | "self" ), { ".", identifier } ;
assignment           = place, "=", expression ;

while-statement      = "while", expression, "do", block, "end" ;
break-statement      = "break" ;
if-form              = "if", condition, "then", block,
                       { "elseif", condition, "then", block },
                       [ "else", block ], "end" ;
condition            = type-test | expression ;
type-test            = place, "is", ( qualified-name | "Nil" ),
                       [ "(", identifier, ")" ] ;

expression           = comparison ;
comparison           = additive, { comparison-operator, additive } ;
comparison-operator  = "==" | "!=" | "<" | "<=" | ">" | ">=" ;
additive             = multiplicative, { ( "+" | "-" ), multiplicative } ;
multiplicative       = postfix, { ( "*" | "/" ), postfix } ;
postfix              = atom, { arguments | member-suffix } ;
member-suffix        = ".", identifier, [ arguments ] ;
arguments            = "(", [ argument, { ",", argument }, [ "," ] ], ")" ;
argument             = [ identifier, ":" ], expression ;

atom                 = literal
                     | identifier
                     | "self"
                     | builtin-value-type
                     | list-literal
                     | print-expression
                     | "(", expression, ")" ;
print-expression     = "print", "(", expression, ")" ;
list-literal         = "[", [ expression, { ",", expression }, [ "," ] ], "]" ;
literal              = float32-literal | unsigned-literal | decimal-literal
                     | integer-literal | boolean-literal | nil-literal
                     | string-literal ;
boolean-literal      = "true" | "false" ;
nil-literal          = "nil" | "null" ;

float32-literal      = digit, { digit }, [ ".", digit, { digit } ], "f32" ;
unsigned-literal     = digit, { digit }, unsigned-suffix ;
unsigned-suffix      = "u8" | "u16" | "u32" | "u64" ;
decimal-literal      = digit, { digit }, ".", digit, { digit } ;
integer-literal      = digit, { digit } ;
string-literal       = '"', { string-character }, '"' ;
identifier           = identifier-start, { identifier-continue } ;
identifier-start     = ASCII-letter | "_" ;
identifier-continue  = identifier-start | digit ;
digit                = "0" | "1" | "2" | "3" | "4"
                     | "5" | "6" | "7" | "8" | "9" ;

(* ASCII-letter is A-Z or a-z. string-character is any character except '"'.
   Whitespace, including line breaks, separates tokens but has no other
   grammatical meaning. A comment begins with // and ends immediately before
   the next line feed or at end of input. Keywords are reserved and cannot be
   identifiers. The semicolons above terminate EBNF productions; Snacc has no
   semicolon token. Numeric tokens use maximal munch: a digit-led token
   immediately followed by an ASCII letter, digit, or underscore that does not
   complete one of the literal forms above is one invalid token, not a valid
   number followed by an identifier; thus `1u8` and `1.0f32` are valid, while
   `1u9`, `1u8x`, `1f64`, and `1.0u8` are lexical errors. A `builtin-value-type`
   is an atom only as a call head, where it removes one represented-type layer
   (`Int64(id)`); a type name alone is never a value. The grammar admits a named
   type wherever a `type` appears, including a Rust bridge signature; that a
   user-defined type may not cross the bridge is a semantic rule, diagnosed by
   the checker. The grammar likewise admits `Nil` wherever a
   `builtin-value-type` appears; that `Nil` is spelled as a value type only as
   a `union-member` or a `type-test` is a semantic rule, also diagnosed by the
   checker. A `reference-parameter-type` is permitted only as the direct
   declared type of a `parameter`; it is rejected in every other `type`
   position, and `Ref<Ref<T>>` is never permitted. The `<` and `>` around a
   referent are type delimiters, not ordered comparisons. *)
