crates/snacc-compiler/src/syntax/parser.rs
use crate::syntax::ast::{
    Arg, BinaryOp, Block, BlockElement, Condition, Expr, ExternFunc, FieldDecl, Func, IfForm,
    MethodDecl, NumLiteral, Param, ParamMode, PlacePath, PlaceRootName, Program, Span, Spanned,
    StaticDecl, StringPart, TypeBody, TypeDecl, TypeName, TypeRef, TypeTest, UnaryOp,
    UnionMemberDecl, Value,
};
use crate::syntax::lexer::Token;
use crate::syntax::lexer::{decode_string_content, normalize_line_endings};
use chumsky::{input::ValueInput, prelude::*};
use std::collections::HashMap;

fn builtin_type_parser<'tokens, 'src: 'tokens, I>()
-> impl Parser<'tokens, I, TypeName, extra::Err<Rich<'tokens, Token<'src>, Span>>> + Clone
where
    I: ValueInput<'tokens, Token = Token<'src>, Span = Span>,
{
    select! {
        Token::TyFloat64 => TypeName::Float64,
        Token::TyInt64 => TypeName::Int64,
        Token::TyBool => TypeName::Bool,
        Token::TyNil => TypeName::Nil,
        Token::TyString => TypeName::String,
        Token::TyUnicode => TypeName::Unicode,
        Token::TyByte => TypeName::Byte,
        Token::TyUInt16 => TypeName::UInt16,
        Token::TyUInt32 => TypeName::UInt32,
        Token::TyUInt64 => TypeName::UInt64,
        Token::TyFloat32 => TypeName::Float32,
    }
    .labelled("built-in type name")
}

fn name_parser<'tokens, 'src: 'tokens, I>()
-> impl Parser<'tokens, I, Spanned<&'src str>, extra::Err<Rich<'tokens, Token<'src>, Span>>> + Clone
where
    I: ValueInput<'tokens, Token = Token<'src>, Span = Span>,
{
    select! { Token::Ident(ident) => ident }
        .map_with(|name, e| (name, e.span()))
        .labelled("identifier")
}

/// Specification 011 section 5: the permitted declaration sites, named by the
/// diagnostic every other type position produces.
const REFERENCE_OUTSIDE_A_PARAMETER: &str = "'Ref<T>' is only valid as the direct type of a function, method, or Rust \
     bridge parameter; a reference is not storable, so it cannot be a result, a \
     local, a field, a represented type, or a union member";

const NESTED_REFERENCE: &str =
    "'Ref<T>' cannot contain another reference; a reference parameter refers to a value type";

/// `primary-value-type = builtin-value-type | qualified-name | "(", sum-type,
/// ")"` and `sum-type = primary-value-type, { "|", primary-value-type }`
/// (Specification 018 section 3). A single primary with no `|` collapses to
/// that primary directly rather than a one-member [`TypeRef::Sum`], so
/// `TypeRef::Sum` always syntactically holds at least two members; resolution
/// still re-validates this after flattening, since a parenthesized group can
/// supply more than one. `Ref<T>` is never a primary: it is not itself a
/// value-type member (section 3), so it simply cannot appear here, and any
/// attempt fails to parse rather than being silently accepted.
fn sum_type_parser<'tokens, 'src: 'tokens, I>()
-> impl Parser<'tokens, I, Spanned<TypeRef<'src>>, extra::Err<Rich<'tokens, Token<'src>, Span>>> + Clone
where
    I: ValueInput<'tokens, Token = Token<'src>, Span = Span>,
{
    recursive(|sum_type| {
        // `"Box", "<", sum-type, ">"` (Specification 016 section 4.1): the
        // same closed-angle-bracket tokenization `Ref<T>` uses, but recursing
        // into the whole sum-type production (not a bare primary) so
        // `Box<Box<T>>` and `Box<A | B>` parse the same way `Ref<Byte | Nil>`
        // already does. `Ref` is never itself a primary here (see the doc
        // comment below), so this can never accept `Box<Ref<T>>` -- that
        // spelling simply fails to parse, exactly like a reference nested
        // anywhere else a plain value type is expected.
        let boxed = just(Token::Box)
            .ignore_then(just(Token::Op("<")))
            .ignore_then(sum_type.clone())
            .then_ignore(just(Token::Op(">")))
            .map_with(|inner, e| (TypeRef::Box(Box::new(inner)), e.span()));

        let view = just(Token::TyView)
            .ignore_then(just(Token::Op("<")))
            .ignore_then(sum_type.clone())
            .then_ignore(just(Token::Op(">")))
            .map_with(|inner, e| (TypeRef::View(Box::new(inner)), e.span()));

        let array = just(Token::TyArray)
            .ignore_then(just(Token::Op("<")))
            .ignore_then(sum_type.clone())
            .then_ignore(just(Token::Ctrl(',')))
            .then(select! { Token::Num(NumLiteral::Int(length)) => length })
            .then_ignore(just(Token::Op(">")))
            .validate(|(inner, length), e, emitter| {
                if length < 0 {
                    emitter.emit(Rich::custom(
                        e.span(),
                        "Array length must be non-negative".to_string(),
                    ));
                }
                (
                    TypeRef::Array(Box::new(inner), length.max(0) as u64),
                    e.span(),
                )
            });
        let list = just(Token::TyList)
            .ignore_then(just(Token::Op("<")))
            .ignore_then(sum_type.clone())
            .then_ignore(just(Token::Op(">")))
            .map_with(|inner, e| (TypeRef::List(Box::new(inner)), e.span()));
        let map = just(Token::TyMap)
            .ignore_then(just(Token::Op("<")))
            .ignore_then(sum_type.clone())
            .then_ignore(just(Token::Ctrl(',')))
            .then(sum_type.clone())
            .then_ignore(just(Token::Op(">")))
            .map_with(|(key, value), e| (TypeRef::Map(Box::new(key), Box::new(value)), e.span()));
        let set = just(Token::TySet)
            .ignore_then(just(Token::Op("<")))
            .ignore_then(sum_type.clone())
            .then_ignore(just(Token::Op(">")))
            .map_with(|inner, e| (TypeRef::Set(Box::new(inner)), e.span()));

        let named_path = name_parser()
            .separated_by(just(Token::Ctrl('.')))
            .at_least(1)
            .collect::<Vec<_>>();
        let generic_args = just(Token::Op("<"))
            .ignore_then(
                sum_type
                    .clone()
                    .separated_by(just(Token::Ctrl(',')))
                    .at_least(1)
                    .collect::<Vec<_>>(),
            )
            .then_ignore(just(Token::Op(">")));
        let applied = named_path
            .clone()
            .then(generic_args)
            .map(|(path, args)| TypeRef::Apply { path, args });

        let primary = builtin_type_parser()
            .map(TypeRef::Builtin)
            .or(applied)
            .or(named_path.map(TypeRef::Named))
            .map_with(|ty, e| (ty, e.span()))
            .or(boxed)
            .or(view)
            .or(array)
            .or(list)
            .or(map)
            .or(set)
            .or(sum_type
                .clone()
                .delimited_by(just(Token::Ctrl('(')), just(Token::Ctrl(')'))))
            .labelled("type")
            .boxed();

        primary
            .clone()
            .then(
                just(Token::Ctrl('|'))
                    .ignore_then(primary)
                    .repeated()
                    .collect::<Vec<_>>(),
            )
            .map_with(|(first, rest), e| {
                if rest.is_empty() {
                    first
                } else {
                    let mut members = vec![first];
                    members.extend(rest);
                    (TypeRef::Sum(members), e.span())
                }
            })
            .boxed()
    })
}

/// `"Ref", "<", sum-type, ">"`, wrapped so the referent's span is preserved
/// and a nested reference is reported as such instead of as a missing type.
/// Specification 018 section 3 widens the referent from a single value type
/// to a full sum type, so `Ref<Byte | Nil>` parses the same way `Ref<Byte>`
/// always has.
fn reference_type_parser<'tokens, 'src: 'tokens, I>()
-> impl Parser<'tokens, I, Spanned<TypeRef<'src>>, extra::Err<Rich<'tokens, Token<'src>, Span>>> + Clone
where
    I: ValueInput<'tokens, Token = Token<'src>, Span = Span>,
{
    let nested = bracketed_reference(sum_type_parser()).validate(|ty, e, emitter| {
        emitter.emit(Rich::custom(e.span(), NESTED_REFERENCE.to_string()));
        ty
    });
    bracketed_reference(nested.or(sum_type_parser())).boxed()
}

fn bracketed_reference<'tokens, 'src: 'tokens, I, P>(
    referent: P,
) -> impl Parser<'tokens, I, Spanned<TypeRef<'src>>, extra::Err<Rich<'tokens, Token<'src>, Span>>> + Clone
where
    I: ValueInput<'tokens, Token = Token<'src>, Span = Span>,
    P: Parser<'tokens, I, Spanned<TypeRef<'src>>, extra::Err<Rich<'tokens, Token<'src>, Span>>>
        + Clone,
{
    just(Token::Ref)
        .ignore_then(just(Token::Op("<")))
        .ignore_then(referent)
        .then_ignore(just(Token::Op(">")))
}

/// Every type position except a parameter. `Ref<T>` is still recognised here so
/// it is rejected with the reason rather than with a generic "expected type",
/// and the referent stands in for it so one violation yields one diagnostic.
fn type_ref_parser<'tokens, 'src: 'tokens, I>()
-> impl Parser<'tokens, I, Spanned<TypeRef<'src>>, extra::Err<Rich<'tokens, Token<'src>, Span>>> + Clone
where
    I: ValueInput<'tokens, Token = Token<'src>, Span = Span>,
{
    reference_type_parser()
        .validate(|ty, e, emitter| {
            emitter.emit(Rich::custom(
                e.span(),
                REFERENCE_OUTSIDE_A_PARAMETER.to_string(),
            ));
            ty
        })
        .or(sum_type_parser())
        .boxed()
}

/// `parameter = identifier, ":", ( value-type | reference-parameter-type )`.
fn param_type_parser<'tokens, 'src: 'tokens, I>() -> impl Parser<
    'tokens,
    I,
    (ParamMode, Spanned<TypeRef<'src>>),
    extra::Err<Rich<'tokens, Token<'src>, Span>>,
> + Clone
where
    I: ValueInput<'tokens, Token = Token<'src>, Span = Span>,
{
    reference_type_parser()
        .map(|ty| (ParamMode::Reference, ty))
        .or(sum_type_parser().map(|ty| (ParamMode::Value, ty)))
        .boxed()
}

/// `place = ( identifier | "self" ), { ".", identifier }` (Specification 012
/// section 4).
fn place_parser<'tokens, 'src: 'tokens, I>()
-> impl Parser<'tokens, I, PlacePath<'src>, extra::Err<Rich<'tokens, Token<'src>, Span>>> + Clone
where
    I: ValueInput<'tokens, Token = Token<'src>, Span = Span>,
{
    select! {
        Token::Ident(name) => PlaceRootName::Name(name),
        Token::SelfKw => PlaceRootName::SelfRef,
    }
    .map_with(|root, e| (root, e.span()))
    .then(
        just(Token::Ctrl('.'))
            .ignore_then(name_parser())
            .repeated()
            .collect::<Vec<_>>(),
    )
    .map_with(|((root, root_span), fields), e| PlacePath {
        root,
        root_span,
        fields,
        span: e.span(),
    })
    .labelled("place")
}

/// Value-producing expressions only. `let`, assignment, `while`, `break`, and
/// `if` are block elements, so none of them can appear in an operand,
/// argument, initializer, or condition position.
pub fn expr_parser<'tokens, 'src: 'tokens, I>()
-> impl Parser<'tokens, I, Spanned<Expr<'src>>, extra::Err<Rich<'tokens, Token<'src>, Span>>> + Clone
where
    I: ValueInput<'tokens, Token = Token<'src>, Span = Span>,
{
    recursive(|expr| {
        let val = select! {
            Token::Nil => Expr::Value(Value::Nil),
            Token::Bool(x) => Expr::Value(Value::Bool(x)),
            Token::Num(n) => Expr::Value(Value::Num(n)),
            Token::Unicode(value) => Expr::Value(Value::Unicode(value)),
        }
        .labelled("value");

        let string = select! { Token::Str(s) => s }.validate(|value, extra, emitter| {
            match decode_string_content(value) {
                Ok(value) => Expr::Value(Value::Str(value)),
                Err(message) => {
                    emitter.emit(Rich::custom(extra.span(), message));
                    Expr::Error
                }
            }
        });

        let raw_string = select! { Token::RawStr(s) => s }
            .map(|value| Expr::Value(Value::Str(normalize_line_endings(value))));

        let interpolated =
            select! { Token::Interpolated(parts) => parts }.validate(|parts, extra, emitter| {
                let mut checked = Vec::with_capacity(parts.len());
                for part in parts {
                    match part {
                        crate::syntax::lexer::InterpolatedPart::Literal(value) => {
                            checked.push(StringPart::Literal(value));
                        }
                        crate::syntax::lexer::InterpolatedPart::Expression(tokens) => {
                            match parse_interpolation_expression(&tokens) {
                                Ok(value) => checked.push(StringPart::Expression(value)),
                                Err(message) => {
                                    emitter.emit(Rich::custom(extra.span(), message));
                                }
                            }
                        }
                    }
                }
                Expr::Interpolated(checked)
            });

        let name = name_parser();

        let items = expr
            .clone()
            .separated_by(just(Token::Ctrl(',')))
            .allow_trailing()
            .collect::<Vec<_>>();

        let list = items
            .clone()
            .map(Expr::List)
            .delimited_by(just(Token::Ctrl('[')), just(Token::Ctrl(']')));

        let empty_call = just(Token::Ctrl('(')).then_ignore(just(Token::Ctrl(')')));
        let map_new = just(Token::TyMap)
            .ignore_then(just(Token::Op("<")))
            .ignore_then(sum_type_parser())
            .then_ignore(just(Token::Ctrl(',')))
            .then(sum_type_parser())
            .then_ignore(just(Token::Op(">")))
            .then_ignore(empty_call.clone())
            .map(|(key, value)| Expr::MapNew(key, value));
        let set_new = just(Token::TySet)
            .ignore_then(just(Token::Op("<")))
            .ignore_then(sum_type_parser())
            .then_ignore(just(Token::Op(">")))
            .then_ignore(empty_call)
            .map(Expr::SetNew);

        // `argument = [ identifier, ":" ], expression`. A named argument is
        // recorded without deciding whether the call head can accept one.
        let argument = name
            .clone()
            .then_ignore(just(Token::Ctrl(':')))
            .or_not()
            .then(expr.clone())
            .map(|(name, value)| Arg { name, value });
        let arguments = argument
            .separated_by(just(Token::Ctrl(',')))
            .allow_trailing()
            .collect::<Vec<_>>()
            .delimited_by(just(Token::Ctrl('(')), just(Token::Ctrl(')')))
            .map_with(|args, e| (args, e.span()));

        let atom = val
            .or(string)
            .or(raw_string)
            .or(interpolated)
            .or(select! { Token::SelfKw => Expr::SelfRef })
            // A built-in type name is a call head only: `Int64(id)` unwraps one
            // represented layer. Checking rejects it in any other position.
            .or(builtin_type_parser().map(Expr::BuiltinType))
            .or(name.clone().map(|(name, _)| Expr::Local(name)))
            .or(list)
            .or(map_new)
            .or(set_new)
            .or(just(Token::Print)
                .ignore_then(
                    expr.clone()
                        .delimited_by(just(Token::Ctrl('(')), just(Token::Ctrl(')'))),
                )
                .map(|expr| Expr::Print(Box::new(expr))))
            // `"box", "(", expression, ")"` (Specification 016 section 4.2): a
            // reserved allocation expression, not a call -- `box` lexes to its
            // own token, so this can never collide with calling a function or
            // type constructor named `box`.
            .or(just(Token::BoxExpr)
                .ignore_then(
                    expr.clone()
                        .delimited_by(just(Token::Ctrl('(')), just(Token::Ctrl(')'))),
                )
                .map(|expr| Expr::Box(Box::new(expr))))
            .map_with(|expr, e| (expr, e.span()))
            .or(expr
                .clone()
                .delimited_by(just(Token::Ctrl('(')), just(Token::Ctrl(')'))))
            .recover_with(via_parser(nested_delimiters(
                Token::Ctrl('('),
                Token::Ctrl(')'),
                [(Token::Ctrl('['), Token::Ctrl(']'))],
                |span| (Expr::Error, span),
            )))
            .recover_with(via_parser(nested_delimiters(
                Token::Ctrl('['),
                Token::Ctrl(']'),
                [(Token::Ctrl('('), Token::Ctrl(')'))],
                |span| (Expr::Error, span),
            )))
            .boxed();

        // `postfix = atom, { arguments | member-suffix }`. Nothing here decides
        // whether a name is a type, field, constructor, or method.
        let generic_arguments = just(Token::Op("<"))
            .ignore_then(
                type_ref_parser()
                    .separated_by(just(Token::Ctrl(',')))
                    .at_least(1)
                    .collect::<Vec<_>>(),
            )
            .then_ignore(just(Token::Op(">")))
            .map_with(|args, e| (args, e.span()))
            .then(arguments.clone());

        enum Suffix<'src> {
            Call(Spanned<Vec<Arg<'src>>>),
            GenericCall(
                Spanned<Vec<Spanned<TypeRef<'src>>>>,
                Spanned<Vec<Arg<'src>>>,
            ),
            Member(Spanned<&'src str>),
            Index(Spanned<Expr<'src>>),
        }
        let suffix = generic_arguments
            .map(|(type_args, args)| Suffix::GenericCall(type_args, args))
            .or(arguments.map(Suffix::Call))
            .or(just(Token::Ctrl('.')).ignore_then(name).map(Suffix::Member))
            .or(expr
                .clone()
                .delimited_by(just(Token::Ctrl('[')), just(Token::Ctrl(']')))
                .map(Suffix::Index));
        let postfix = atom.foldl_with(suffix.repeated(), |base, suffix, e| {
            let expr = match suffix {
                Suffix::Call(args) => Expr::Call(Box::new(base), args),
                Suffix::GenericCall(type_args, args) => {
                    Expr::GenericCall(Box::new(base), type_args, args)
                }
                Suffix::Member(name) => Expr::Member(Box::new(base), name),
                Suffix::Index(index) => Expr::Index(Box::new(base), Box::new(index)),
            };
            (expr, e.span())
        });

        // Unary negation recurses into itself, not the complete expression:
        // this preserves right associativity and keeps `!a or b` grouped as
        // `(!a) or b` rather than `!(a or b)`.
        let unary = recursive(|unary| {
            just(Token::Op("!"))
                .ignore_then(unary.clone())
                .map_with(|value, e| (Expr::Unary(UnaryOp::Not, Box::new(value)), e.span()))
                .or(just(Token::ReturnOnError)
                    .ignore_then(postfix.clone())
                    .map_with(|value, e| (Expr::ReturnOnError(Box::new(value)), e.span())))
                .or(postfix.clone())
                .boxed()
        });

        let op = just(Token::Op("*"))
            .to(BinaryOp::Mul)
            .or(just(Token::Op("/")).to(BinaryOp::Div));
        let product = unary
            .clone()
            .foldl_with(op.then(unary.clone()).repeated(), |a, (op, b), e| {
                (Expr::Binary(Box::new(a), op, Box::new(b)), e.span())
            });

        let op = just(Token::Op("+"))
            .to(BinaryOp::Add)
            .or(just(Token::Op("-")).to(BinaryOp::Sub));
        let sum = product
            .clone()
            .foldl_with(op.then(product).repeated(), |a, (op, b), e| {
                (Expr::Binary(Box::new(a), op, Box::new(b)), e.span())
            });

        let op = just(Token::Op("=="))
            .to(BinaryOp::Eq)
            .or(just(Token::Op("!=")).to(BinaryOp::NotEq))
            .or(just(Token::Op("<")).to(BinaryOp::Less))
            .or(just(Token::Op("<=")).to(BinaryOp::LessEq))
            .or(just(Token::Op(">")).to(BinaryOp::Greater))
            .or(just(Token::Op(">=")).to(BinaryOp::GreaterEq));
        // A comparison accepts at most one operator. Besides enforcing the
        // language rule, this leaves `f<T>(x)` unambiguous once generic calls
        // are added: a second `<`/`>` cannot be consumed as a legal chain.
        let compare =
            sum.clone()
                .then(op.then(sum.clone()).or_not())
                .map_with(|(left, comparison), e| match comparison {
                    Some((op, right)) => {
                        (Expr::Binary(Box::new(left), op, Box::new(right)), e.span())
                    }
                    None => left,
                });

        let logical_and = compare.clone().foldl_with(
            just(Token::And)
                .to(BinaryOp::And)
                .then(compare.clone())
                .repeated(),
            |a, (op, b), e| (Expr::Binary(Box::new(a), op, Box::new(b)), e.span()),
        );
        let logical_or = logical_and.clone().foldl_with(
            just(Token::Or)
                .to(BinaryOp::Or)
                .then(logical_and.clone())
                .repeated(),
            |a, (op, b), e| (Expr::Binary(Box::new(a), op, Box::new(b)), e.span()),
        );

        logical_or.labelled("expression").as_context()
    })
    .boxed()
}

/// Parses one already-tokenized interpolation expression outside the
/// recursive parser-construction closure. Keeping this helper concrete avoids
/// recursively instantiating the full expression parser type.
fn parse_interpolation_expression<'src>(
    tokens: &[Spanned<Token<'src>>],
) -> Result<Spanned<Expr<'src>>, String> {
    let input_span: Span = (0usize..0usize).into();
    let (value, errors) = expr_parser()
        .parse(tokens.map(input_span, |(token, span)| (token, span)))
        .into_output_errors();
    if let Some(error) = errors.first() {
        return Err(error.to_string());
    }
    value.ok_or_else(|| "interpolation expression produced no syntax".into())
}

/// `condition = type-test | expression`. A type test is valid only as a
/// complete `if`/`elseif` condition (Specification 010 section 12.2), which
/// this shape enforces structurally.
fn condition_parser<'tokens, 'src: 'tokens, I>()
-> impl Parser<'tokens, I, Condition<'src>, extra::Err<Rich<'tokens, Token<'src>, Span>>> + Clone
where
    I: ValueInput<'tokens, Token = Token<'src>, Span = Span>,
{
    // Every built-in type name is a reserved word rather than an identifier,
    // so a member path accepts each one as its own segment spelling.
    // Specification 018 section 3 extends the tested member to any direct
    // sum member, including a built-in scalar (`is Byte(byte)`), not only
    // `Nil` as before.
    let segment = select! {
        Token::Ident(name) => name,
        Token::TyNil => "Nil",
        Token::TyFloat64 => "Float64",
        Token::TyInt64 => "Int64",
        Token::TyBool => "Bool",
        Token::TyUInt16 => "UInt16",
        Token::TyUInt32 => "UInt32",
        Token::TyUInt64 => "UInt64",
        Token::TyFloat32 => "Float32",
        Token::TyString => "String",
        Token::TyUnicode => "Unicode",
        Token::TyByte => "Byte",
    }
    .map_with(|name, e| (name, e.span()));

    let type_test = place_parser()
        .then_ignore(just(Token::Is))
        .then(
            segment
                .separated_by(just(Token::Ctrl('.')))
                .at_least(1)
                .collect::<Vec<_>>()
                .map_with(|member, e| (member, e.span())),
        )
        .then(
            name_parser()
                .delimited_by(just(Token::Ctrl('(')), just(Token::Ctrl(')')))
                .or_not(),
        )
        .map_with(|((place, (member, member_span)), binding), e| {
            Condition::TypeTest(TypeTest {
                place,
                member,
                member_span,
                binding,
                span: e.span(),
            })
        })
        .labelled("type test");

    type_test.or(expr_parser().map(Condition::Expr)).boxed()
}

/// One block element. Nested blocks (loop bodies, `if` branches) are parsed by
/// recursing through this same parser, so `block_element_parser` owns the whole
/// statement grammar.
pub fn block_element_parser<'tokens, 'src: 'tokens, I>()
-> impl Parser<'tokens, I, Spanned<BlockElement<'src>>, extra::Err<Rich<'tokens, Token<'src>, Span>>>
+ Clone
where
    I: ValueInput<'tokens, Token = Token<'src>, Span = Span>,
{
    let mut element = Recursive::declare();

    // A block runs until the enclosing terminator (`end`, `elseif`, `else`, or
    // end of input); none of those can begin a block element, so `repeated`
    // stops on its own without an explicit guard.
    let block = element
        .clone()
        .repeated()
        .collect::<Vec<_>>()
        .map_with(|elements, e| Block {
            elements,
            span: e.span(),
        });

    let name = name_parser();
    let expr = expr_parser();

    let let_ = just(Token::Let)
        .ignore_then(just(Token::Mut).or_not().map(|m| m.is_some()))
        .then(name.clone())
        .then_ignore(just(Token::Ctrl(':')))
        .then(type_ref_parser())
        .then_ignore(just(Token::Op("=")))
        .then(expr.clone())
        .map(
            |(((mutable, (name, name_span)), ty), value)| BlockElement::Let {
                mutable,
                name,
                name_span,
                ty,
                value,
            },
        )
        .labelled("variable declaration");

    // The single `=` token only begins an assignment when a place sits at
    // block-element start; `==` is a distinct token, so no lookahead is needed
    // beyond chumsky's ordinary backtracking into the expression alternative.
    let assign = place_parser()
        .then_ignore(just(Token::Op("=")))
        .then(expr.clone())
        .map(|(place, value)| BlockElement::Assign { place, value })
        .labelled("assignment");

    let indexed_assign = expr
        .clone()
        .then_ignore(just(Token::Op("=")))
        .then(expr.clone())
        .map(|(target, value)| BlockElement::IndexedAssign { target, value })
        .labelled("indexed assignment");

    let while_ = just(Token::While)
        .ignore_then(expr.clone())
        .then_ignore(just(Token::Do))
        .then(block.clone())
        .then_ignore(just(Token::End))
        .map_with(|(condition, body), e| BlockElement::While {
            condition,
            body,
            span: e.span(),
        })
        .labelled("while statement");

    let for_ = just(Token::For)
        .ignore_then(name.clone())
        .then(just(Token::Ctrl(',')).ignore_then(name.clone()).or_not())
        .then_ignore(just(Token::In))
        .then(expr.clone())
        .then_ignore(just(Token::Do))
        .then(block.clone())
        .then_ignore(just(Token::End))
        .map_with(|(((value, key), iterable), body), e| BlockElement::For {
            value,
            key,
            iterable,
            body,
            span: e.span(),
        })
        .labelled("for statement");

    let break_ = just(Token::Break).map_with(|_, e| BlockElement::Break(e.span()));

    let defer_ = just(Token::Defer)
        .to(false)
        .or(just(Token::DeferOnError).to(true))
        .then(expr.clone())
        .map_with(|(on_error, call), e| BlockElement::Defer {
            on_error,
            call,
            span: e.span(),
        })
        .labelled("deferred call");

    // `return-statement = "return", [ expression ]` (Specification 026
    // section 4). `return` is bare only when the next token closes the
    // current block (`end`, `elseif`, `else`) or ends the token stream (the
    // top-level program boundary); `.rewind()` peeks that fact without
    // consuming it. Every other token must begin one maximal expression, so
    // `return let x: Int64 = 1` fails to parse rather than silently
    // splitting into a bare return followed by a `let` -- `let` cannot begin
    // an expression, matching section 4 rule 2's "must begin one expression".
    let return_boundary = just(Token::End)
        .ignored()
        .or(just(Token::ElseIf).ignored())
        .or(just(Token::Else).ignored())
        .or(end())
        .rewind();
    let return_ = just(Token::Return)
        .ignore_then(return_boundary.map(|()| None).or(expr.clone().map(Some)))
        .map_with(|value, e| BlockElement::Return(value, e.span()))
        .labelled("return statement");

    let arm = condition_parser()
        .then_ignore(just(Token::Then))
        .then(block.clone());
    let if_ = just(Token::If)
        .ignore_then(arm.clone())
        .then(
            just(Token::ElseIf)
                .ignore_then(arm)
                .repeated()
                .collect::<Vec<_>>(),
        )
        .then(just(Token::Else).ignore_then(block).or_not())
        .then_ignore(just(Token::End))
        .map_with(|((first, mut arms), else_branch), e| {
            arms.insert(0, first);
            BlockElement::If(IfForm {
                arms,
                else_branch,
                span: e.span(),
            })
        })
        .labelled("if form");

    element.define(
        let_.or(while_)
            .or(for_)
            .or(break_)
            .or(defer_)
            .or(return_)
            .or(if_)
            .or(assign)
            .or(indexed_assign)
            .or(expr.map(BlockElement::Expr))
            .map_with(|element, e| (element, e.span()))
            .boxed(),
    );

    element
}

pub fn block_parser<'tokens, 'src: 'tokens, I>()
-> impl Parser<'tokens, I, Block<'src>, extra::Err<Rich<'tokens, Token<'src>, Span>>> + Clone
where
    I: ValueInput<'tokens, Token = Token<'src>, Span = Span>,
{
    block_element_parser()
        .repeated()
        .collect::<Vec<_>>()
        .map_with(|elements, e| Block {
            elements,
            span: e.span(),
        })
}

enum Item<'src> {
    Func(Spanned<&'src str>, Func<'src>),
    Extern(Spanned<&'src str>, ExternFunc<'src>),
    Type(TypeDecl<'src>),
    Method(MethodDecl<'src>),
    Static(StaticDecl<'src>),
    Element(Spanned<BlockElement<'src>>),
}

pub fn program_parser<'tokens, 'src: 'tokens, I>()
-> impl Parser<'tokens, I, Program<'src>, extra::Err<Rich<'tokens, Token<'src>, Span>>> + Clone
where
    I: ValueInput<'tokens, Token = Token<'src>, Span = Span>,
{
    let ident = select! { Token::Ident(ident) => ident };
    let name = name_parser();
    let type_ref = type_ref_parser();

    let param = ident
        .map_with(|name, e| (name, e.span()))
        .then_ignore(just(Token::Ctrl(':')))
        .then(param_type_parser())
        .map(|((name, name_span), (mode, ty))| Param {
            name,
            mode,
            ty,
            span: name_span,
        });
